# oadl-2025

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/oadl/: stock.py  stock_diccionario.py  stock_pandas.py
tests/: test_stock.py
