[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "oadl"
version = "0.1.0"
description = "Capstone project de Optimización Aplicada a Distribución Logística"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pandas"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8"]

[tool.pytest.ini_options]
testpaths = ["tests"]